--- a/index.html
+++ b/index.html
@@ -3,39 +3,43 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Mental Health AI Chatbot</title>
+    <title>HappiRay</title>
     <style>
         :root {
-            --primary-color: #000dff;
-            --primary-light: #6b73ff;
-            --primary-dark: #0009cc;
+            --primary-color: #FF7F50; /* Coral color to match the robot theme */
+            --primary-light: #FFA07A; /* Light Salmon */
+            --primary-dark: #FF6347; /* Tomato */
             --text-light: #ffffff;
             --text-dark: #333333;
             --bg-light: #ffffff;
             --bg-dark: #121212;
             --message-user: var(--primary-color);
-            --message-bot: #e2e2e2;
+            --message-bot: #FFF5EE; /* Seashell */
             --message-user-text: var(--text-light);
-            --message-bot-text: var(--primary-color);
+            --message-bot-text: #333333;
         }
 
         .dark-theme {
-            --primary-color: #4d5bff;
-            --primary-light: #8187ff;
-            --primary-dark: #3a46cc;
+            --primary-color: #FF7F50; /* Coral color to match the robot theme */
+            --primary-light: #FFA07A; /* Light Salmon */
+            --primary-dark: #FF6347; /* Tomato */
             --text-light: #ffffff;
             --text-dark: #e0e0e0;
-            --bg-light: #121212;
-            --bg-dark: #000000;
-            --message-user: #4d5bff;
-            --message-bot: #2a2a2a;
+            --bg-light: #2A2A2A;
+            --bg-dark: #1A1A1A;
+            --message-user: #FF7F50; /* Coral */
+            --message-bot: #3A3A3A;
             --message-user-text: var(--text-light);
             --message-bot-text: #e0e0e0;
         }
 
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(135deg, var(--primary-light), var(--primary-color));
+            background-color: #FFA07A; /* Light Salmon color that matches the robot image */
+            background-image: url('https://i.imgur.com/REPLACE_WITH_ACTUAL_IMAGE_ID.jpg'); /* Replace with actual image URL */
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
             margin: 0;
             height: 100vh;
             display: flex;
@@ -46,7 +50,7 @@
         }
 
         #app {
-            background: var(--bg-light);
+            background: rgba(255, 255, 255, 0.85); /* Semi-transparent white background */
             max-width: 400px;
             width: 100%;
             height: 600px;
@@ -55,10 +59,11 @@
             flex-direction: column;
             box-shadow: 0 8px 20px rgb(0 0 0 / 0.2);
             position: relative;
+            backdrop-filter: blur(5px); /* Adds a slight blur effect to the background */
         }
 
         header {
-            background: var(--primary-color);
+            background: #FF7F50; /* Coral color to match the robot theme */
             color: var(--text-light);
             padding: 15px;
             font-size: 1.5rem;
@@ -68,6 +73,19 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        }
+
+        header span {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-weight: 700;
+            letter-spacing: 1px;
+            background: linear-gradient(45deg, #FFFFFF, #FFE4C4);
+            -webkit-background-clip: text;
+            background-clip: text;
+            -webkit-text-fill-color: transparent;
+            color: transparent;
+            text-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
         }
 
         .mental-health-indicator {
@@ -79,6 +97,7 @@
             border-radius: 50%;
             background-color: #4CAF50; /* Default: green */
             transition: background-color 0.5s ease;
+            box-shadow: 0 0 5px rgba(76, 175, 80, 0.5);
         }
 
         .mental-health-indicator.medium {
@@ -214,8 +233,11 @@
             padding: 10px;
             display: flex;
             flex-direction: column;
-            background-color: var(--bg-light);
+            background-color: rgba(255, 255, 255, 0.7); /* More transparent background */
             transition: background-color 0.3s ease;
+            background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20"><circle cx="10" cy="10" r="8" fill="none" stroke="%23FFA07A" stroke-width="0.5" opacity="0.2"/></svg>');
+            background-size: 40px 40px;
+            background-position: center;
         }
 
         .message {
@@ -234,17 +256,20 @@
         }
 
         .user {
-            background: var(--message-user);
-            color: var(--message-user-text);
+            background: #FF7F50; /* Coral color to match the robot theme */
+            color: white;
             align-self: flex-end;
             border-bottom-right-radius: 0;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
 
         .bot {
-            background: var(--message-bot);
-            color: var(--message-bot-text);
+            background: #FFF5EE; /* Seashell color for bot messages */
+            color: #333;
             align-self: flex-start;
             border-bottom-left-radius: 0;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            border-left: 3px solid #FF7F50; /* Coral accent */
         }
 
         .typing-indicator {
@@ -289,9 +314,10 @@
         form {
             display: flex;
             padding: 10px;
-            border-top: 1px solid #ddd;
-            background-color: var(--bg-light);
+            border-top: 1px solid #FFD8BF; /* Light coral border */
+            background-color: rgba(255, 255, 255, 0.9);
             position: relative;
+            border-radius: 0 0 15px 15px;
         }
 
         input[type="text"] {
@@ -299,32 +325,48 @@
             padding: 12px 18px;
             padding-right: 40px; /* Space for the music icon */
             border-radius: 25px;
-            border: 1px solid #ccc;
+            border: 2px solid #FFD8BF; /* Light coral border */
             font-size: 1rem;
             outline: none;
-            background-color: var(--bg-light);
-            color: var(--text-dark);
+            background-color: white;
+            color: #333;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
+            transition: all 0.3s ease;
+        }
+
+        input[type="text"]:focus {
+            border-color: #FF7F50; /* Coral color when focused */
+            box-shadow: 0 0 0 3px rgba(255, 127, 80, 0.2);
         }
 
         button {
             margin-left: 10px;
-            background: var(--primary-color);
+            background: #FF7F50; /* Coral color to match the robot theme */
             border: none;
-            color: var(--text-light);
+            color: white;
             font-weight: bold;
             border-radius: 25px;
             padding: 0 20px;
             cursor: pointer;
-            transition: background 0.3s ease;
+            transition: all 0.3s ease;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
 
         button:hover:not(:disabled) {
-            background: var(--primary-dark);
+            background: #FF6347; /* Tomato color on hover */
+            transform: translateY(-2px);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
+        }
+
+        button:active:not(:disabled) {
+            transform: translateY(1px);
+            box-shadow: 0 2px 3px rgba(0, 0, 0, 0.1);
         }
 
         button:disabled {
-            background: #888;
+            background: #FFCDB2; /* Light coral when disabled */
             cursor: default;
+            opacity: 0.7;
         }
 
         #music-icon, #wellness-icon, #clear-chat-btn {
@@ -332,18 +374,19 @@
             top: 50%;
             transform: translateY(-50%);
             font-size: 1.2rem;
-            color: var(--primary-color);
-            background: transparent;
-            border: none;
+            color: #FF7F50; /* Coral color to match the robot theme */
+            background: rgba(255, 255, 255, 0.9);
+            border: 2px solid #FFD8BF; /* Light coral border */
             cursor: pointer;
             padding: 5px;
             border-radius: 50%;
-            transition: all 0.2s ease;
+            transition: all 0.3s ease;
             width: 30px;
             height: 30px;
             display: flex;
             align-items: center;
             justify-content: center;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
         }
 
         #music-icon {
@@ -359,27 +402,33 @@
         }
 
         #music-icon:hover, #wellness-icon:hover, #clear-chat-btn:hover {
-            background-color: rgba(0, 0, 0, 0.05);
+            background-color: white;
             transform: translateY(-50%) scale(1.1);
+            border-color: #FF7F50; /* Coral color on hover */
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            color: #FF6347; /* Tomato color on hover */
         }
 
         .tooltip {
             position: absolute;
             bottom: 100%;
             right: 0;
-            background-color: var(--primary-color);
+            background-color: #FF7F50; /* Coral color to match the robot theme */
             color: white;
             padding: 5px 10px;
-            border-radius: 5px;
+            border-radius: 12px;
             font-size: 0.8rem;
             opacity: 0;
-            transition: opacity 0.3s;
+            transition: all 0.3s;
             pointer-events: none;
             white-space: nowrap;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
+            transform: translateY(5px);
         }
 
-        #music-icon:hover .tooltip {
+        #music-icon:hover .tooltip, #wellness-icon:hover .tooltip, #clear-chat-btn:hover .tooltip {
             opacity: 1;
+            transform: translateY(0);
         }
 
 
@@ -393,10 +442,10 @@
     </style>
 </head>
 <body>
-    <div id="app" role="main" aria-label="Mental Health AI Chatbot Interface">
+    <div id="app" role="main" aria-label="HappiRay Chatbot Interface">
         <header>
-            <div class="mental-health-indicator" id="mental-health-indicator" title="Mental health status indicator"></div>
-            <span>Mental Health Chatbot</span>
+            <div class="mental-health-indicator" id="mental-health-indicator" title="Mood indicator"></div>
+            <span>HappiRay</span>
             <div class="wellness-mode" id="wellness-indicator">Wellness Mode</div>
             <div class="positive-mood-mode" id="positive-mood-indicator">Celebration Mode</div>
             <div class="mood-encouragement-mode" id="mood-encouragement-indicator">Encouragement Mode</div>
@@ -408,7 +457,7 @@
 
 
         <form id="chat-form" aria-label="Chat input form">
-            <input id="input-msg" type="text" autocomplete="off" placeholder="Type your message..." required aria-required="true"/>
+            <input id="input-msg" type="text" autocomplete="off" placeholder="Chat with HappiRay..." required aria-required="true"/>
             <button id="music-icon" type="button" aria-label="Get song recommendations">
                 🎵
                 <span class="tooltip">Get song recommendations</span>
